--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,6 +1,9 @@
 {
   "Code": {
     "code": "Code",
+    "Error": {
+      "CANT_DISPLAY": "Error: Could not display object."
+    },
     "output": "Code output",
     "run": "Run",
     "placeHolder": "the code goes here"
