--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -35,7 +35,7 @@
       "General": {
         "sheetName": "Nome da folla",
         "submit": "Enviar",
-        "characterSheet": "Folla de personaxe",
+        "Sheet": "Folla de personaxe",
         "deleteSheet": "Borrar folla actual",
         "saveSuccess": "Gardado completado con éxito",
 
