improve properties panel

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -43,7 +43,7 @@
         "previousSheet": "Previous sheet"
       },
       "Style": {
-        "properties": "Properties",
+        "properties": "General Properties",
         "rotate": "Rotate",
         "scale": "Scale",
         "width": "Width",
