--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -44,7 +44,7 @@
         "previousSheet": "Hoja anterior"
       },
       "Style": {
-        "properties": "Propiedades",
+        "properties": "Propiedades generales",
         "rotate": "Rotación",
         "scale": "Escala",
         "width": "Ancho",
