--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -45,7 +45,7 @@
         "previousSheet": "Folla anterior"
       },
       "Style": {
-        "properties": "Propiedades",
+        "properties": "Propiedades xerais",
         "rotate": "Rotación",
         "scale": "Escala",
         "width": "Ancho",
