added properties to text

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -63,6 +63,12 @@
         "ridge": "Ridge",
         "inset": "Inset",
         "outset": "Outset",
+        "css": "Css",
+        "textAling": "Text Aling",
+        "fontSize": "Font size",
+        "textProperties": "Text properties",
+        "font": "Font",
+        "value": "Value",
         "none": "None"
       },
       "Success": {
