added process message

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -112,6 +112,9 @@
   },
   "General": {
     "accept": "Accept",
+    "addPlayer": "Add player",
+    "send": "Send",
+    "actualRoles": "Actual roles",
     "cancel": "Cancel",
     "roles": "Roles",
     "codes": "Codes",
