--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -49,6 +49,9 @@
       },
       "Style": {
         "properties": "Propiedades generales",
+        "addPlayer": "Agregar Personaje",
+        "send": "Enviar",
+        "actualRoles": "Roles actuales",
         "rotate": "Rotación",
         "scale": "Escala",
         "width": "Ancho",
