--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -114,6 +114,9 @@
   },
   "General": {
     "accept": "Aceptar",
+    "addPlayer": "Engadir personaxe",
+    "send": "Enviar",
+    "actualRoles": "Roles actuaias",
     "cancel": "Cancelar",
     "roles": "Roles",
     "codes": "Códigos",
