--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -226,14 +226,19 @@
       "LOGIC_BOOLEAN_TRUE": "true",
       "LOGIC_BOOLEAN_FALSE": "false",
       "LOGIC_NEGATE_TITLE": "not %1",
-      "Blocks": {
-        "CUSTOM_IF": "if %1 then %2",
-        "CUSTOM_IF_TOOLTIP": "Conditional block",
-        "THEN": "then",
-        "ELSEIF": "otherwise, if ",
-        "ELSE": "if not",
-        "IF": "if"
-      }
+
+      "CONTROLS_IF_HELPURL": "https://github.com/google/blockly/wiki/IfElse",
+      "CONTROLS_IF_TOOLTIP_1": "If a value is true, then do some statements.",
+      "CONTROLS_IF_TOOLTIP_2": "If a value is true, then do the first block of statements. Otherwise, do the second block of statements.",
+      "CONTROLS_IF_TOOLTIP_3": "If the first value is true, then do the first block of statements. Otherwise, if the second value is true, do the second block of statements.",
+      "CONTROLS_IF_TOOLTIP_4": "If the first value is true, then do the first block of statements. Otherwise, if the second value is true, do the second block of statements. If none of the values are true, do the last block of statements.",
+      "CONTROLS_IF_MSG_IF": "if",
+      "CONTROLS_REPEAT_INPUT_DO": "then",
+      "CONTROLS_IF_MSG_ELSEIF": "else if",
+      "CONTROLS_IF_MSG_ELSE": "else",
+      "CONTROLS_IF_IF_TOOLTIP": "Add, remove, or reorder sections to reconfigure this if block.",
+      "CONTROLS_IF_ELSEIF_TOOLTIP": "Add a condition to the if block.",
+      "CONTROLS_IF_ELSE_TOOLTIP": "Add a final, catch-all condition to the if block."
     },
     "Math": {
       "MODULE_NAME": "Math",
