improve contexMenu rename

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -113,6 +113,7 @@
   "General": {
     "accept": "Accept",
     "addPlayer": "Add player",
+    "nameChanged": "Name changed",
     "send": "Send",
     "actualRoles": "Actual roles",
     "cancel": "Cancel",
