--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -115,6 +115,7 @@
   "General": {
     "accept": "Aceptar",
     "addPlayer": "Engadir personaxe",
+    "nameChanged": "Cambiouse o nome correctamente",
     "send": "Enviar",
     "actualRoles": "Roles actuaias",
     "cancel": "Cancelar",
