added upload pdf

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -112,6 +112,8 @@
   },
   "General": {
     "accept": "Accept",
+    "add": " Add",
+    "upload": " Upload",
     "addPlayer": "Add player",
     "nameChanged": "Name changed",
     "send": "Send",
