--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -117,6 +117,8 @@
   },
   "General": {
     "accept": "Aceptar",
+    "add": "Añadir",
+    "upload": "Subir",
     "cancel": "Cancelar",
     "roles": "Roles",
     "nameChanged": "Se ha cambiado el nombre correctamente",
