--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -47,6 +47,9 @@
         "previousSheet": "Previous sheet"
       },
       "Style": {
+        "scriptProperties": "Script properties",
+        "options": "Options",
+        "allowAdditions": "Allow add options",
         "properties": "General Properties",
         "rotate": "Rotate",
         "tag": "Tags",
