--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -49,6 +49,9 @@
         "previousSheet": "Hoja anterior"
       },
       "Style": {
+        "scriptProperties": "Propiedades para el comportamiento",
+        "options": "Opciones",
+        "allowAdditions": "Permitir añadir opciones",
         "properties": "Propiedades generales",
         "addPlayer": "Agregar Personaje",
         "tag": "Tags",
