render text area

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -50,6 +50,7 @@
         "scriptProperties": "Script properties",
         "options": "Options",
         "allowAdditions": "Allow add options",
+        "textColor": "Text color",
         "properties": "General Properties",
         "rotate": "Rotate",
         "tag": "Tags",
