--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -52,6 +52,7 @@
         "scriptProperties": "Propiedades para o comportamento",
         "options": "Opcions",
         "allowAdditions": "Permitir engafir opcions",
+        "textColor": "Cor do texto",
 
         "properties": "Propiedades xerais",
         "rotate": "Rotación",
