--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -121,6 +121,7 @@
   },
   "General": {
     "accept": "Accept",
+    "alreadyAccount": "Already have an account?",
     "add": " Add",
     "upload": " Upload",
     "addPlayer": "Add player",
@@ -336,6 +337,7 @@
   },
   "Errors": {
     "EMPTY_FOLDER_NAME": "The folder name can't be empty",
+    "SIGN_UP_FAILED": "Sign Up failed",
     "EMPTY_FILE_NAME": "The file name can't be empty",
     "EMPTY_USER_NAME": "Username cannot be empty.",
     "EMPTY_PASSWORD": "Password cannot be empty.",
