--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -126,6 +126,7 @@
   },
   "General": {
     "accept": "Aceptar",
+    "alreadyAccount": "¿Ya tienes una cuenta?",
     "add": "Añadir",
     "upload": "Subir",
     "cancel": "Cancelar",
@@ -316,6 +317,7 @@
   },
   "Errors": {
     "EMPTY_FOLDER_NAME": "El nombre de la carpeta no puede estar vacío",
+    "SIGN_UP_FAILED": "Fallo al registrarse",
     "EMPTY_FILE_NAME": "El nombre del fichero no puede estar vacio",
     "FILE_NOT_FOUND": "No se ha encontrado el fichero",
     "FILE_NAME_ALREADY_EXISTS": "Ya existe un fichero con ese nombre",
