--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -124,6 +124,7 @@
   },
   "General": {
     "accept": "Aceptar",
+    "alreadyAccount": "Xa tes unha conta?",
     "add": "Engadir",
     "upload": "Subir",
     "addPlayer": "Engadir personaxe",
@@ -316,6 +317,7 @@
   },
   "Errors": {
     "EMPTY_FOLDER_NAME": "O nome do cartafol non pode estar vavaleirocío",
+    "SIGN_UP_FAILED": "Fallo ao rexistrarxe",
     "EMPTY_FILE_NAME": "O nome do ficheiro non pode estar valeiro",
     "FILE_NOT_FOUND": "Non se atopou o ficheiro",
     "FILE_NAME_ALREADY_EXISTS": "Xa existe un ficheiro con este nome",
