--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -36,6 +36,9 @@
     "Sheet": {
       "General": {
         "sheetName": "Nome da folla",
+        "checkBoxColors": "Cores do checkbox",
+        "activeColor": "Cor activo:",
+        "inactiveColor": "Cor desmarcado:",
         "folderName": "Nome da  carpeta",
         "submit": "Enviar",
         "changeMode": "Cambiar de modo",
@@ -124,7 +127,11 @@
   },
   "General": {
     "accept": "Aceptar",
+    "addOption": "Engadir opción",
+    "back": "Atrás",
     "alreadyAccount": "Xa tes unha conta?",
+    "enterPlayerName": "Introduce o nome do xogador",
+    "playerName": "Nome do xogador",
     "add": "Engadir",
     "upload": "Subir",
     "addPlayer": "Engadir personaxe",
@@ -132,6 +139,8 @@
     "send": "Enviar",
     "actualRoles": "Roles actuaias",
     "cancel": "Cancelar",
+    "confirm": "Confirmar",
+
     "roles": "Roles",
     "codes": "Códigos",
     "selectFile": "Selecione un arquivo",
@@ -318,6 +327,8 @@
   "Errors": {
     "EMPTY_FOLDER_NAME": "O nome do cartafol non pode estar vavaleirocío",
     "SIGN_UP_FAILED": "Fallo ao rexistrarxe",
+    "FILE_DELETION_FAILED": "Fallo ao borrar o arquivo",
+
     "EMPTY_FILE_NAME": "O nome do ficheiro non pode estar valeiro",
     "FILE_NOT_FOUND": "Non se atopou o ficheiro",
     "FILE_NAME_ALREADY_EXISTS": "Xa existe un ficheiro con este nome",
@@ -336,11 +347,19 @@
     "LOWER_CASE": "O contrasinal ten que ter ao menos unha minuscula",
     "SPECIAL_CHARACTERES": "O contrasinal ten que conter ao menos un caracter especial"
   },
+  "Success": {
+    "rolDeleted": "Rol eliminado"
+  },
   "Messages": {
     "FILE_UPDATED": "O ficheiro actualizouse correctamente",
     "FILE_DELETED": "O ficheiro eliminouse correctamente",
     "DIRECTORY_UPDATED": "O cartafol actualizouse correctamente",
     "DIRECTORY_NAME_UPDATED": "o cartafol eliminouse correctamente",
     "CONTENT_INSERTED": "O contido gardouse correctamente"
+  },
+
+  "Pages": {
+    "pageNotFound": "A páxina que estás buscando no existe.",
+    "404": "404 - Non se atopou a páxina que buscas"
   }
 }
