--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -92,15 +92,17 @@
         "none": "Ninguno"
       },
       "Success": {
-        "created": "A folla '{0}' creouse correctamente",
-        "updated": "A folla '{0}' seactualizo correctamente",
-        "deleted": "A folla se eliminou correctamente"
+        "created": "La hoja '{0}' se creó correctamente",
+        "updated": "La hoja '{0}' se actualizó correctamente",
+        "deleted": "La hoja se elimino correctamente",
+        "uploaded": "El Archivo se ha subido correctamente"
       },
       "Error": {
-        "NAME_REQUIRED": "O nome é obligatorio.",
-        "ROL_ID_NOT_FOUND": "Non se atopou o id del rol",
-        "deleted": "Error ao eliminaren a folla",
-        "created": "Error ao crearen a folla"
+        "NAME_REQUIRED": "EL nombre es obligatorio.",
+        "ROL_ID_NOT_FOUND": "No se encontró el id del rol",
+        "deleted": "Error al eliminar la hoja",
+        "created": "Error al crear la hoja",
+        "uploaded": "El archivo ya existe"
       }
     }
   },
@@ -127,8 +129,18 @@
       "multipleDelete": "Estas seguro de querer borrar los siguientes {0} ficheros?"
     }
   },
+  "Chat": {
+    "General": {
+      "commandNotFound": "No se ha encontrado el comando: {0}",
+      "noScripts": "No hay comportamientos disponibles"
+    }
+  },
   "General": {
     "accept": "Aceptar",
+    "chat": "Chat",
+
+    "edit": "Editar",
+    "enterParameters": "Introduce parámetros",
     "back": "Atrás",
     "addOption": "Añadir opción",
     "alreadyAccount": "¿Ya tienes una cuenta?",
